bug fixing and changed placedCard